--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
-.maroon { color :#ae0208; }
-.navy { color: #05004c;}
-.indigo {color: #3250b3;}
-.spacing{ letter-spacing: 2px; word-spacing: 5px; line-height: 20px;
-
+body{
+    background-color: #247b9e;
 }
-.uppercase{ text-transform: uppercase;}
-.lowercase{ text-transform: lowercase;}
-.capitalize{ text-transform: capitalize;}
-.paragraf{
-    font-family: "courier new";
-    font-size: 20px;
+div.container {
+    margin: 0 auto;
+    width: 90;
 }
-ul{
-    list-style-type: circle;
-
+header {
+    width: 100%;
+    height:100px;
+    background-color: #ffffff;
 }
-li{
-    font-family: "tahoma";
-    font-size: 15px;
+nav {
+    width: 20%;
+    height:800px;
+    background: #002f42;
+    float: left;
+}
+div.content{
+    width: 80%;
+    height:800px;
+    background: #fff;
+    float:right;
+}
+footer {
+    width: 100%;
+    height: 50px;
+    background: #016060;
 }
